--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,6 +22,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 16px 40px;
+    margin-top: 60px;
     border-radius: 8px;
     gap: 10px;
     background: #4F9CF9;
@@ -33,9 +34,16 @@ body {
 }
 
 .body-text {
+    margin-top: 24px;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+.title {
+    color: #212529;
+    font-size: 72px;
+    font-weight: 700;
 }
 
 .colored {
@@ -91,6 +99,10 @@ body {
     gap: 24px;
 }
 
+.btns > .btn {
+    margin-top: 0;
+}
+
 .promo {
     display: flex;
     align-items: center;
@@ -110,9 +122,52 @@ body {
 
 .promo__first > .body-text {
     color: #fff;
-    margin-top: 24px;
 }
 
-.promo__first > .btn {
-    margin-top: 60px;
+.work-managment {
+    padding: 140px 0;
+    background: url('../img/managment/backward.svg') 0 285px no-repeat;
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        &__txt {
+            position: relative;
+            z-index: 0;
+            max-width: 672px;
+            &__line {
+                position: absolute;
+                z-index: -1;
+            }
+        }
+        &__img {
+            display: block;
+            width: 100%;
+        }
+    }
+}
+
+.work-managment > .body-text {
+    color: #212529;
+}
+
+.project > img {
+    max-width: 690px;
+}
+
+.project-line {
+    top: 154px;
+}
+
+.together {
+    margin-top: 100px;
+}
+
+.together > img {
+    max-width: 710px;
+}
+
+.together-line {
+    top: 56px;
+    right: 163px;
 }
