almost full site

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@mixin section-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@mixin text-block {
+    position: relative;
+    z-index: 0;
+}
+
+@mixin line-decoration($top: 0){
+    position: absolute;
+    z-index: -1;
+    top: $top;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -128,9 +145,7 @@ body {
     padding: 140px 0;
     background: url('../img/managment/backward.svg') 0 285px no-repeat;
     &__block {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include section-block;
         &__txt {
             position: relative;
             z-index: 0;
@@ -170,4 +185,308 @@ body {
 .together-line {
     top: 56px;
     right: 163px;
+}
+
+.extension {
+    background: #043873;
+    padding: 140px 0;
+    &__txt {
+        @include text-block;
+    }
+    &__img {
+        display: block;
+        max-width: 607px;
+        width: 100%;
+    }
+}
+
+.extension > .container {
+    @include section-block;
+    gap: 98px;
+}
+
+.extension__txt > .title {
+    color:#FFF;
+}
+
+.extension__txt > .body-text {
+    color: #FFF;
+}
+
+.extension__line {
+    @include line-decoration(65px);
+    right: 117px;
+}
+
+.customize {
+    padding: 140px 0;
+    &__txt {
+        @include text-block;
+    }
+    &__img {
+        display: block;
+        max-width: 714px;
+        width: 100%;
+    }
+}
+
+.customize > .container {
+    @include section-block;
+    gap: 98px;
+}
+
+.customize__line {
+    @include line-decoration(150px);
+    left: -11px;
+}
+
+.plan {
+    padding: 140px 0;
+    &__txt {
+        @include text-block;
+    }
+    &__price {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 60px;
+        gap: 32px;
+        &__item {
+            display: flex;
+            flex-direction: column;
+            padding: 40px 44px;
+            border: 1px solid #FFE492;
+            border-radius: 10px;
+            background: #FFF;
+            color: #212529;            
+            &__title {
+                font-size: 24px;
+                font-weight: 600;
+                line-height: 36px;
+            }
+            &__amount {
+                margin-top: 25px;
+                font-size: 36px;
+                font-weight: 700;
+            }
+            &__descr {
+                margin-top: 25px;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 23px;
+            }
+            &__lists {
+                display: flex;
+                flex-direction: column;
+                list-style-type: none;
+                margin: 0;
+                margin-top: 25px;
+                padding: 0;
+                gap: 28px;
+                &__list {
+                    display: flex;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 20px;
+                    gap: 20px;
+                }
+                &__list > img {
+                    max-width: 18px;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+.plan-active {
+    padding: 80px 44px;
+    color:#FFF;
+    background: #043873;
+    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.08);
+    border: none;
+}
+
+.btn-border {
+    color: #212529;
+    border-radius: 8px;
+    border: 1px solid #FFE492;
+    background: #FFF;
+}
+
+.plan-active > .plan__price__item__amount {
+    color: #FFE492;
+}
+
+.plan__price__item > .btn {
+    max-width: 180px;
+}
+
+.plan__txt > .body-text {
+    text-align: center;
+}
+
+.plan__txt > .title {
+    text-align: center;
+}
+
+.plan-line {
+    @include line-decoration(62px);
+    left: 49%;
+}
+
+.work-everywhere {
+    @include text-block;
+    background: #043873;
+    padding: 140px 0;
+    text-align: center;
+    &__content {
+        @include text-block;
+        max-width: 1064px;
+        margin: 0 auto;
+        color:#FFF;
+    }
+    &__line {
+        @include line-decoration(65px);
+        right: 0;
+    }
+}
+
+.work-everywhere__content > .btn{
+    margin: 0 auto;
+    margin-top: 60px;
+}
+
+.work-everywhere__content > .title {
+    color: #FFF;
+}
+
+.spot {
+    @include line-decoration(-190px);
+    left: 0;
+}
+
+.data {
+    padding: 140px 0;
+    &__txt {
+        @include text-block;
+    }
+    &__img {
+        display: block;
+    }
+}
+
+.data > .container {
+    @include section-block;
+}
+
+.data__line {
+    @include line-decoration(62px);
+    left: 200px;
+}
+
+.sponsors {
+    padding: 140px 0;
+    text-align: center;
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 100px;
+    }
+}
+
+.sponsors > .container {
+    @include text-block;
+}
+
+.sponsors-line {
+    @include line-decoration(60px);
+    left: 45%;
+}
+
+.apps {
+    background: #043873 url('../img/apps-bg.svg') center center no-repeat;
+    padding: 140px 0;
+    color: #FFF;
+}
+
+.apps > .container {
+    @include section-block;
+    gap: 100px;
+}
+
+.apps__txt > .title {
+    color: #FFF;
+}
+
+.response {
+    @include text-block;
+    padding: 140px 0;
+    text-align: center;
+    &__wrapper {
+        @include section-block;
+        margin-top: 60px;
+        gap: 32px;
+        &__item {
+            padding: 60px 40px;
+            border-radius: 10px;
+            background: #FFF;
+            color: #212529;
+            box-shadow: 15px 10px 50px 0px rgba(0, 0, 0, 0.10);
+            &__user {
+                display: flex;
+                align-items: center;
+                margin-top: 60px;
+                gap: 42px;
+                &__txt {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    &__name {
+                        font-size: 24px;
+                        font-weight: 600;
+                        line-height: 36px;
+                    }
+                }
+            }
+        }
+    }
+    &__hr {
+        margin-top: 40px;
+    }
+    &__points {
+        display: flex;
+        justify-content: center;
+        gap: 12px;
+        &__point {
+            margin-top: 60px;
+            width: 12px;
+            height: 12px;
+            background: #4F9CF9;
+            border-radius: 100%;
+        }
+    }
+}
+
+.active-point {
+    background: #043873;
+}
+
+.response__wrapper__item > .body-text {
+    margin-top: 32px;
+}
+
+.respones-active {
+    background: #4F9CF9;
+    box-shadow: none;
+    color: #FFF;
+}
+
+.respones-active :is(.response__wrapper__item__user__txt__name) {
+    color: #043873;
+}
+
+.response-line {
+    @include line-decoration(175px);
+    left: 62%;
 }
